<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/display"
        android:textAlignment="textEnd"
        android:paddingEnd="15dp"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:importantForAutofill="no"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/enter_value"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:onClick="zero"
            android:background="@drawable/btn_background"
            android:textColor="@color/tanAccent"
            android:text="@string/zeroKey"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/button10"
            app:layout_constraintStart_toStartOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_background"
            android:textColor="@color/tanAccent"
            android:onClick="decimal"
            android:text="@string/point"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:onClick="equalsTo"
            android:background="@drawable/equals_bg"
            android:textColor="@color/tanAccent"
            android:text="@string/equalsTo"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:onClick="three"
            android:text="@string/threeKey"
            android:textSize="22sp"
            android:background="@drawable/btn_background"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/arithmetic_bg"
            android:textColor="@color/tanAccent"
            android:layout_marginTop="10dp"
            android:onClick="subtract"
            android:text="@string/subtraction"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:onClick="add"
            android:text="@string/addition"
            android:textSize="22sp"
            android:background="@drawable/arithmetic_bg"
            android:textColor="@color/tanAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:onClick="four"
            android:text="@string/fourKey"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/button9"
            android:background="@drawable/btn_background"
            android:textColor="@color/tanAccent"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:onClick="one"
            android:background="@drawable/btn_background"
            android:textColor="@color/tanAccent"
            android:text="@string/oneKey"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:onClick="five"
            android:text="@string/fiveKey"
            android:background="@drawable/btn_background"
            android:textColor="@color/tanAccent"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <Button
            android:id="@+id/button10"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_background"
            android:textColor="@color/tanAccent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:onClick="two"
            android:text="@string/twoKey"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button11"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:onClick="six"
            android:text="@string/sixKey"
            android:textSize="22sp"
            android:background="@drawable/btn_background"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button12"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:onClick="multiply"
            android:background="@drawable/arithmetic_bg"
            android:textColor="@color/tanAccent"
            android:text="@string/multiplication"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button13"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button13"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:onClick="seven"
            android:text="@string/sevenKey"
            android:background="@drawable/btn_background"
            android:textColor="@color/tanAccent"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button18" />

        <Button
            android:id="@+id/button14"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:onClick="eight"
            android:background="@drawable/btn_background"
            android:textColor="@color/tanAccent"
            android:text="@string/eightKey"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/button15"
            app:layout_constraintTop_toBottomOf="@+id/button19" />

        <Button
            android:id="@+id/button15"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:onClick="nine"
            android:background="@drawable/btn_background"
            android:textColor="@color/tanAccent"
            android:text="@string/nineKey"

            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button20" />

        <ImageButton
            android:id="@+id/button16"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/backspace"
            android:contentDescription="@string/backspace"
            android:onClick="delete"
            android:text="@string/delete"
            android:textColor="@color/tanAccent"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/button17"
            app:layout_constraintStart_toStartOf="@+id/button17"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button17"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arithmetic_bg"
            android:onClick="division"
            android:text="@string/division"
            android:textColor="@color/tanAccent"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button18"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button18"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_background"
            android:onClick="parClose"
            android:text="@string/parClose"
            android:textColor="@color/tanAccent"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button19"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_background"
            android:onClick="parOpen"
            android:text="@string/ParOpen"
            android:textColor="@color/tanAccent"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/button20"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button20"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/cancel_button"
            android:onClick="cancel"
            android:text="@string/clearText"
            android:textColor="@color/tanAccent"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button16" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>